--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "ws": "^8.18.0",
     "zod": "^3.25.76",
     "zod-validation-error": "^3.5.4",
-    "esbuild": "^0.25.0",
-    "vite": "^7.3.0"
+    "esbuild": "^0.25.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -102,7 +101,9 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vite": "^7.3.0"
+
   },
   "overrides": {
     "drizzle-kit": {
